--- a/Data modelling.ipynb
+++ b/Data modelling.ipynb
@@ -5,18 +5,19 @@
    "metadata": {},
    "source": [
     "# Data modelling introduction\n",
+    "**Fungi Specimen Classification project part 3**\n",
     "\n",
     "This is a classification problem where the target variable edibility is either 'e' (edible) or 'p' (poisonous). In this stage of the project - after feature selection and cleaning - there are **115 features** in each row of data that all have to be used to classify the edibility of the specimen. \n",
     "\n",
     "## Methodology\n",
     "Considering the high number of predictor variables (115) I will use a decision tree algorithm and random forest algorithm to model the data because tree based models possess superior performance in terms of accuracy and compuatational time on high dimensional data that other conventional classification machine learning models like Support vector machines, K-nearest neighbours, and Naive bayesian classifiers. \n",
     "\n",
-    "Utilizing more than 1 model gives me a baseline model for comparison that will eliminate the possibility of oversight in this experiment when determining the causality of machine learning performance. I will test these models with exhaustive search of  to tune the hyperparamaters against a baseline model with the default hyperparameter values."
+    "Utilizing more than 1 model gives me a baseline model for comparison that will eliminate the possibility of oversight in this experiment when determining the causality of machine learning performance. I will test these models with exhaustive grid search to optimize the hyperparamaters, and compare them against a baseline model with the default hyperparameter values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -922,6 +923,8 @@
     "| Random Forest | 1.0  | 1.0    | 1.0   | 1.0     |\n",
     "\n",
     "\n",
+    "Due to the high accuracy values >0.999 of all classifiers, the set of selcted features from part 1 was not utilized to increase model accuracy\n",
+    "\n",
     "## Decision tree\n",
     "On the testing data decision tree model returned an accuracy of 1.0 with the baseline model and 0.9993 with the exhaustive gridsearch model. The accuracy values from testing the model on the training and testing dataset both of which have over 1000 samples, and the slightly lower training set test accuracy suggest that overfitting to the training data in the exhaustive gridsearch model is not present. This suggests that the accuracy of the default decision tree model with NO CONFIGURED HYPERPARAMTERS is more accurate.\n",
     "\n",
@@ -931,6 +934,7 @@
     "The accuracy values of all the tests are at 1.0 meaning that the Random forest classifiers are fully accurate on the training data and the test data, with and without exhaustive gridsearch. Meaning no tweaking of paramaters was needed.\n",
     "\n",
     "**This would be the ideal classifier to put into production(after being tuned with different ranges)** as it had the same grid search hyperparameter ranges as decision tree yet was able to retain full and constant classification accuracy midly suggesting that the accuracy of the random forest classifier is not detrimented by un-optimal hyperparameters \n",
+    "\n",
     "\n",
     "\n"
    ]
