--- a/Data understanding and exploration.ipynb
+++ b/Data understanding and exploration.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
+    "\n",
+    "**Fungi Specimen Classification project part 1**\n",
+    "\n",
     "The purpose of this data mining project is to classify the edibility of fungi specimens according to their physical attributes with machine learning models trained on the dataset provided by The Audubon Society Field Guide to North American Mushrooms (1981)"
    ]
   },
@@ -36,7 +39,7 @@
    "metadata": {},
    "source": [
     "# Data exploration\n",
-    "Understanding the agaricus lepiota dataset's format, quantity, field identities, distributions"
+    "Understanding, exploring and visualizing the agaricus-lepiota dataset's format, quantity, field identities, distributions"
    ]
   },
   {
@@ -46,6 +49,8 @@
    "outputs": [],
    "source": [
     "data = pd.read_csv(\"agaricus-lepiota.data\", index_col=None, header=None)\n",
+    "\n",
+    "# column names provided in dataset information file\n",
     "columns = ['edibility', 'cap-shape', 'cap-surface', 'cap-color', 'bruises', 'odor', 'gill-attachment', 'gill-spacing', \n",
     "           'gill-size', 'gill-color', 'stalk-shape', 'stalk-root', 'stalk-surface-above-ring','stalk-surface-below-ring', \n",
     "            'stalk-color-above-ring', 'stalk-color-below-ring', 'veil-type', 'veil-color', 'ring-number', 'ring-type', \n",
@@ -508,7 +513,7 @@
    "metadata": {},
    "source": [
     "## Exploring the distributions of categorical variables\n",
-    "Using countplots to plot the distribution of features and distribution the edibility label with each feature"
+    "Using countplots to visualise the distribution value in each feature, and the distribution of the edibility within each feature to asses how much variance in edibility each feature accounts for."
    ]
   },
   {
@@ -1008,7 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset feature analysis and selection\n",
+    "## Feature analysis and selection\n",
     "The values of the veil-type attribute in the dataset are entirely the same. The large majority of the values in the veil-colour column share the same value of 'w' while a minute amount of the data has values other than 'w'.\n",
     "\n",
     "In the stalk-root feature, there are about 2500 records with missing values.\n",
