--- a/Data cleaning and preprocessing.ipynb
+++ b/Data cleaning and preprocessing.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data cleaning and preprocessing\n",
+    "\n",
+    "**Fungi Specimen Classification project part 2**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +50,7 @@
        "'edibility'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +284,7 @@
        "4       g         e  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data cleaning\n",
+    "## Data cleaning methodology\n",
     "Cleaning the stalk-root column of missing values. To clean missing categorical data, there are a few options:\n",
     "* Fill in with expert knowledge\n",
     "* Ignore column\n",
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +776,7 @@
        "4             1             0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1165,7 @@
        "4             1             0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,15 +1193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training data accuracy 0.72\n",
-      "testing data accuracy 0.725\n"
+      "training data accuracy 0.721\n",
+      "testing data accuracy 0.721\n"
      ]
     }
    ],
@@ -1210,22 +1219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 0, 0],\n",
-       "       [1, 0, 0, 0],\n",
+       "array([[0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0],\n",
        "       [1, 0, 0, 0],\n",
        "       ...,\n",
+       "       [1, 0, 0, 0],\n",
        "       [0, 0, 0, 0],\n",
-       "       [0, 0, 0, 1],\n",
-       "       [1, 0, 0, 0]], dtype=uint8)"
+       "       [0, 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,14 +1247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['gini', 6, 0.04, 7, 0.7573073516386183], ['entropy', 12, 0.01, 4, 0.7573073516386183], ['entropy', 22, 0.005, 1, 0.7581930912311781]]\n"
+      "[['gini', 36, 0.005, 2, 0.7599645704162976], ['entropy', 4, 0.01, 6, 0.7599645704162976], ['gini', 4, 0.005, 6, 0.7661647475642162]]\n"
      ]
     }
    ],
@@ -1308,7 +1317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data cleaning and processing\n",
+    "## Data cleaning and processing procedure\n",
     "1. Predict the values of rows with missing stalk-root feature\n",
     "2. Replace the missing values of stalk-root in the non-ohc encoded dataframe\n",
     "    * drop rows with missing data that were unable to be filled\n",
@@ -1318,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,20 +1358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "b  c  e  r\n",
-       "1  0  0  0    1936\n",
-       "0  0  0  0     528\n",
-       "         1      16\n",
+       "1  0  0  0    1472\n",
+       "0  0  0  0     672\n",
+       "         1     288\n",
+       "      1  0      48\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1427,11 +1437,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>b</td>\n",
+       "      <td>e</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1457,12 +1467,12 @@
        "   b  c  e  r stalk-root\n",
        "0  0  0  0  0       None\n",
        "1  1  0  0  0          b\n",
-       "2  1  0  0  0          b\n",
+       "2  0  0  1  0          e\n",
        "3  1  0  0  0          b\n",
        "4  1  0  0  0          b"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,21 +1509,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b    5453\n",
-       "e    1120\n",
+       "b    4989\n",
+       "e    1168\n",
        "c     512\n",
+       "r     480\n",
        "?     303\n",
-       "r     208\n",
        "Name: stalk-root, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1557,7 @@
        "Name: stalk-root, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
