--- a/Data cleaning and preprocessing.ipynb
+++ b/Data cleaning and preprocessing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Data cleaning and preprocessing\n",
     "\n",
-    "**Fungi Specimen Classification project part 2**"
+    "**Part 2**"
    ]
   },
   {
@@ -20,6 +20,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set()\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -64,6 +69,32 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['edibility', 'cap-shape', 'cap-surface', 'cap-color', 'bruises', 'odor',\n",
+       "       'gill-attachment', 'gill-spacing', 'gill-size', 'gill-color',\n",
+       "       'stalk-shape', 'stalk-root', 'stalk-surface-above-ring',\n",
+       "       'stalk-surface-below-ring', 'stalk-color-above-ring',\n",
+       "       'stalk-color-below-ring', 'veil-type', 'veil-color', 'ring-number',\n",
+       "       'ring-type', 'spore-print-colors', 'population', 'habitat'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +315,7 @@
        "4       g         e  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -401,12 +432,12 @@
    "source": [
     "The visualized plots of the stalk data show that there is sufficient variance explained by the stalk related features. So this means that it is a worthwhile attempt to increase accuracy by filling in the missing values.\n",
     "\n",
-    "## **However. If a feature value occurs in a row with '?' as the stalk-root but does not occur in all rows without '?', the model will not be able to use that feature value to predict the stalk-root value and accuracy will definiteively be lost.**"
+    "**However. If a feature value occurs in a row with '?' as the stalk-root but does not occur in all rows without '?', the model will not be able to use that feature value to predict the stalk-root value and accuracy will definiteively be lost**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +807,7 @@
        "4             1             0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,18 +829,6 @@
    "source": [
     "## Comparing baseline model and tuned model \n",
     "Data has a 80-20 percent train test split. The compare the accuracy between baseline model and tuned model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -1200,8 +1219,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training data accuracy 0.721\n",
-      "testing data accuracy 0.721\n"
+      "training data accuracy 0.72\n",
+      "testing data accuracy 0.722\n"
      ]
     }
    ],
@@ -1225,13 +1244,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 1, 0],\n",
+       "array([[1, 0, 0, 0],\n",
        "       [0, 0, 0, 0],\n",
        "       [1, 0, 0, 0],\n",
        "       ...,\n",
        "       [1, 0, 0, 0],\n",
        "       [0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0]], dtype=uint8)"
+       "       [1, 0, 0, 0]], dtype=uint8)"
       ]
      },
      "execution_count": 13,
@@ -1254,7 +1273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['gini', 36, 0.005, 2, 0.7599645704162976], ['entropy', 4, 0.01, 6, 0.7599645704162976], ['gini', 4, 0.005, 6, 0.7661647475642162]]\n"
+      "[['gini', 32, 0.005, 3, 0.7670504871567759], ['gini', 22, 0.005, 3, 0.7785651018600531], ['entropy', 36, 0.005, 4, 0.7785651018600531]]\n"
      ]
     }
    ],
@@ -1366,9 +1385,8 @@
       "text/plain": [
        "b  c  e  r\n",
        "1  0  0  0    1472\n",
-       "0  0  0  0     672\n",
-       "         1     288\n",
-       "      1  0      48\n",
+       "0  0  0  0     576\n",
+       "      1  0     432\n",
        "dtype: int64"
       ]
      },
@@ -1439,9 +1457,9 @@
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>e</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1467,7 +1485,7 @@
        "   b  c  e  r stalk-root\n",
        "0  0  0  0  0       None\n",
        "1  1  0  0  0          b\n",
-       "2  0  0  1  0          e\n",
+       "2  0  0  0  0       None\n",
        "3  1  0  0  0          b\n",
        "4  1  0  0  0          b"
       ]
@@ -1516,10 +1534,10 @@
      "data": {
       "text/plain": [
        "b    4989\n",
-       "e    1168\n",
+       "e    1552\n",
        "c     512\n",
-       "r     480\n",
        "?     303\n",
+       "r     192\n",
        "Name: stalk-root, dtype: int64"
       ]
      },
@@ -1532,13 +1550,6 @@
     "data_copy = data.copy()\n",
     "data_copy['stalk-root'] = stalk['stalk-root']\n",
     "data_copy['stalk-root'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can see the data cleaning has been successful in filling in many of the unknown values of stalk-root in the entire dataset. The number of '?' values in the stalk-root column has decreased from 2840 to 303"
    ]
   },
   {
@@ -1567,18 +1578,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the data cleaning has been successful in filling in many of the unknown values of stalk-root in the entire dataset. The number of '?' values in the stalk-root column has decreased from 2840 to 303"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# drop rows with '?'\n",
     "data_copy_final = data_copy.drop(data_copy[data_copy['stalk-root']=='?'].index, axis=0) #takes index object\n",
+    "\n",
     "# drop the relevant rows and columns\n",
     "data_copy_final = data_copy_final.drop('veil-type', axis=1)\n",
+    "data_copy_final = data_copy_final.drop(['cap-shape','gill-attachment','veil-color','ring-number'],axis=1)\n",
+    "\n",
     "# one hot encode the cleaned data\n",
     "data_copy_final_ohc = pd.get_dummies(data_copy_final)\n",
-    "# export as a new datafile\n",
+    "\n",
     "data_copy_final_ohc.to_csv('agaricus-lepiota_processed.data', index=False)"
    ]
   }
