--- a/Data understanding and exploration.ipynb
+++ b/Data understanding and exploration.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "**Fungi Specimen Classification project part 1**\n",
+    "**Part 1**\n",
     "\n",
     "The purpose of this data mining project is to classify the edibility of fungi specimens according to their physical attributes with machine learning models trained on the dataset provided by The Audubon Society Field Guide to North American Mushrooms (1981)"
    ]
